--- a/documentation/tutorial-components.html
+++ b/documentation/tutorial-components.html
@@ -103,7 +103,7 @@
     </div>
   </nav>
 
-  <div class="page-header header-filter clear-filter" style="background-image: url('../src/assets/img/cover.jpeg'); background-size: cover">
+  <div class="page-header header-filter clear-filter" >
     <div class="container">
       <div class="col-md-8 ml-auto mr-auto">
         <div class="brand">
